--- a/components.json
+++ b/components.json
@@ -11,7 +11,7 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@/src/components",
-    "utils": "../../lib/utils"
+    "components": "./src/components",
+    "utils": "./src/lib/utils"
   }
 }
